# pyth-crosschain

target_chains/solana/: Cargo.toml
target_chains/solana/pyth_solana_receiver_sdk/: Cargo.toml
