[workspace]
resolver = "2"
members = [
    "programs/*",
    "cli/",
    "program_simulator/",
    "pyth_solana_receiver_sdk/",
    "common_test_utils",
]

exclude = [
    "programs/pyth-price-store"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
wormhole-core-bridge-solana = {git = "https://github.com/wormhole-foundation/wormhole", rev = "7bd40b595e22c5512dfaa2ed8e6d7441df743a69"}
wormhole-vaas-serde =  "0.1.0"
serde_wormhole = "0.1.0"
anchor-lang = { git = "https://github.com/acheroncrypto/anchor", branch = "v0.31.0" }
anchor-client = { git = "https://github.com/acheroncrypto/anchor", branch = "v0.31.0" }
solana-program = "2"
solana-program-test = "2"
solana-sdk = "2"
solana-client = "2"
